# pdan

./: .bumpversion.cfg  .bumpversion.toml  .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.cpython.yml  pyproject.toml  pytest.ini  run-tests.ps1  run-tests.sh
.github/workflows/: python-app.yml
pdan/: __init__.py  draw.py  pdan.py  temp.py
tests/: config.py
tests/pdan_tests/: test_inverse_shoelace.py  test_minimizing_split.py  test_slope_intercept.py  test_to_partitions.py  test_to_right_left_contours.py  test_to_splitter.py  test_vertical_segments_splitter.py  utils.py
tests/strategies/: base.py  geometry.py
