[tool.poetry]
name = "pdan"
version = "0.1.9-alpha"
description = ""
authors = ["GeorgySk <skorobogatov@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
gon = "^5.0.0"

[tool.poetry.group.dev.dependencies]
bump-my-version = "^0.18.3"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
hypothesis = "^6.61.0"
hypothesis-geometry = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["pdan"]

[tool.pytest.ini_options]
addopts = "--verbose -s --hypothesis-profile=default"
testpaths = ["tests"]
